--- a/scss/index.css
+++ b/scss/index.css
@@ -239,6 +239,10 @@ a.btn.blue {
   width: 100%;
 }
 
+.textimage {
+  padding: 30px 0;
+}
+
 .textimage .grid {
   display: -ms-grid;
   display: grid;
@@ -280,6 +284,7 @@ a.btn.blue {
   position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  padding: 30px 0;
 }
 
 .features .title {
@@ -335,5 +340,79 @@ a.btn.blue {
   justify-self: center;
   -ms-flex-item-align: center;
       align-self: center;
+}
+
+.testimonials {
+  border-top: 1px solid #d9d9d9;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 30px 0;
+}
+
+.testimonials .container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.testimonials .item {
+  padding: 30px;
+  border: 1px solid #d9d9d9;
+  text-align: center;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 5px 3px 0px #d9d9d9;
+          box-shadow: 0px 5px 3px 0px #d9d9d9;
+  margin-bottom: 30px;
+}
+
+.testimonials:before {
+  content: " ";
+  width: 50px;
+  height: 1px;
+  position: absolute;
+  display: block;
+  top: -1px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  background: #ea0c79;
+}
+
+.freetrial {
+  position: relative;
+  overflow: hidden;
+}
+
+.freetrial img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 0;
+}
+
+.freetrial .text {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  color: #fff;
+}
+
+.freetrial .text a {
+  margin-top: 30px;
+}
+
+@media (min-width: 992px) {
+  .freetrial img {
+    width: 100%;
+  }
+  .freetrial .text {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  .freetrial .text a {
+    margin-top: 60px;
+  }
 }
 /*# sourceMappingURL=index.css.map */
