--- a/scss/index.scss
+++ b/scss/index.scss
@@ -112,6 +112,7 @@ a {
 }
 
 .textimage {
+  padding: $padding-sm;
   .grid {
     display: grid;
     grid-gap: 30px;
@@ -138,6 +139,7 @@ a {
   border-top: 1px solid $dividerGrey;
   position: relative;
   box-sizing: border-box;
+  padding: $padding-sm;
   .title{
     text-align: center;
   }
@@ -172,5 +174,68 @@ a {
     display: inline-flex;
     justify-self: center;
     align-self: center;
+  }
+}
+
+.testimonials {
+  border-top: 1px solid $dividerGrey;
+  position: relative;
+  box-sizing: border-box;
+  padding: $padding-sm;
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .item {
+    padding: 30px;
+    border: 1px solid #d9d9d9;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0px 5px 3px 0px rgba(217, 217, 217, 1);
+    margin-bottom: 30px;
+  }
+  &:before {
+    content: " ";
+    width: 50px;
+    height: 1px;
+    position: absolute;
+    display: block;
+    top: -1px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: $hotpink;
+  }
+}
+
+.freetrial {
+  position: relative;
+  overflow: hidden;
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+  }
+  .text {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    color: $white;
+    a {
+      margin-top: 30px;
+    }
+  }
+  @media (min-width: $screen-md) {
+    img {
+      width: 100%;
+    }
+    .text {
+      max-width: 600px;
+      margin: 0 auto;
+      a {
+        margin-top: 60px;
+      }
+    }
   }
 }
